// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchList should render the component 1`] = `
<div>
  <div
    class="searchList"
  >
    <input
      class="searchInput"
      placeholder="Search for pokemons"
      title="Type in a name"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`SearchList when there are options to list should render with list 1`] = `
<div>
  <div
    class="searchList"
  >
    <input
      class="searchInput"
      placeholder="Search for pokemons"
      title="Type in a name"
      type="text"
      value=""
    />
    <ul
      class="list"
    >
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            charmander
          </span>
          <span
            class="pokemonItemInfo"
          >
            #4
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            charmeleon
          </span>
          <span
            class="pokemonItemInfo"
          >
            #5
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            charizard
          </span>
          <span
            class="pokemonItemInfo"
          >
            #6
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            chimchar
          </span>
          <span
            class="pokemonItemInfo"
          >
            #390
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            charjabug
          </span>
          <span
            class="pokemonItemInfo"
          >
            #737
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            charcadet
          </span>
          <span
            class="pokemonItemInfo"
          >
            #935
          </span>
        </div>
      </li>
      <li
        class="menuItem"
        role="menuitem"
      >
        <div
          class="pokemonItem"
        >
          <span>
            pecharunt
          </span>
          <span
            class="pokemonItemInfo"
          >
            #1025
          </span>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
